--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'react-awesome-slider/dist/styles.css';
 
 /* * {
   border: 1px red solid;
