--- a/app/globals.css
+++ b/app/globals.css
@@ -3,16 +3,17 @@
 @tailwind utilities;
 @import 'react-awesome-slider/dist/styles.css';
 
-/* * {
-  border: 1px red solid;
-} */
 * {
-  --primary: #F6B41C;
+  border: 1px red solid;
+}
+* {
+  --primary: #3F7CAC;
   /* --primary: #053387;  */
-  --secondary: #053387;
-  --night: #0C0F0A;
-  --eerie: #1D1E18;
-  --mint: #CBF3F0;
+  --secondary: #17C3B2;
+  --eerie-black: #1f1f1fff;
+  --white-smoke: #f6f4f3ff;
+  --steel-blue: #3f7cacff;
+  --light-sea-green: #17c3b2ff;
 }
 
 
